# mucache

./: .gitignore  LICENSE  README.md  go.mod  go.sum  requirements.txt
cmd/boutique/: products.json  run.sh
cmd/cm/: README.md  main.go
cmd/singleservice/: run.sh
cmd/social/: run.sh
deploy/: Dockerfile  app.yaml
deploy/cm/: Dockerfile  cm.yaml
deploy/shard/: Dockerfile  app.yaml
deploy/singleservice/: Dockerfile  redis.yaml  singleservice.yaml
experiments/: helper.py
experiments/boutique/: populate.py  populate.sh  run.py
experiments/cachesize/: run.py
experiments/chain/: run.py
experiments/fanin/: run.py
experiments/hotel/: create_hotels.py  populate.py  populate.sh  run.py  ttl.py
experiments/k8s_cm/: boutique.txt  chain.txt  chain3.txt  chain4.txt  fanin.txt  hotel.txt  loadcm.txt  movie.txt  social.txt  star.txt  twoservices-shard.txt  twoservices.txt
experiments/local_cm/: cache_manager_addresses.txt
experiments/movie/: populate.py  populate.sh  run.py
experiments/shard/: run.py
experiments/social/: README.md  localized_experiment_populate_posts.py  mixed_workload.lua  populate.py  populate.sh  post_storage.lua  prepare.sh  run.py  shard_populate.sh
experiments/star/: run.py
proxy/: Cargo.toml  clippy.toml  run_hotel.sh  run_movie.sh  run_shard_social.sh  run_social.sh
proxy/src/: boutique.rs  cm.rs  cmthroughput.rs  fanin.rs  hotel.rs  main.rs  movie.rs  social.rs  twoservices.rs  util.rs
scripts/: README.md  clean.sh  deploy.sh  parse_xml_manifest.py  parser.py  shard_clean.sh  shard_deploy.sh  utility.sh  vars_template.sh
(+217 files in other folders)
