[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.8.0"
prost = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "0.14", features = ["full"] }
rand = "0.8"
zipf = "7.0.0"
once_cell = "1.16.0"
clap = { version = "3.2.18", features = ["derive", "env"] }
whoami = "1.3.0"
async-trait = "0.1.66"
rustc-hash = "1.1.0"


[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]